base/opa-gatekeeper-policies/resources/constraints/users/constraint.yaml
# Copyright (c) [2024] Fergal Somers
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# 
#      http://www.apache.org/licenses/LICENSE-2.0
#  
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAllowedUsers
metadata:
  name: psp-pods-allowed-user-ranges
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    exemptImages:
      - docker.io/istio*   # Istio
      - kong/httpbin       # argo/httpbin (Argo Workflow)
      - minio/minio*       # argo/minio   (Argo Workflow)
    runAsUser:
      rule: MustRunAs # MustRunAsNonRoot # RunAsAny 
      ranges:
        - min: 1000
          max: 65534
    runAsGroup:
      rule: MayRunAs # MustRunAs MayRunAs # RunAsAny 
      ranges:
        - min: 1000
          max: 65534
    supplementalGroups:
      rule: MayRunAs # MustRunAs MayRunAs # RunAsAny 
      ranges:
        - min: 1000
          max: 65534
    fsGroup:
      rule: MayRunAs # MustRunAs MayRunAs # RunAsAny 
      ranges:
        - min: 1000
          max: 65534
